@@ -1,5 +1,6 @@
 package uk.gov.hmcts.reform.fpl.handlers;
 
+import com.google.common.collect.Sets;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -10,19 +11,28 @@ import org.mockito.junit.jupiter.MockitoSettings;
 import org.mockito.quality.Strictness;
 import uk.gov.hmcts.reform.fpl.events.GeneratedOrderEvent;
 import uk.gov.hmcts.reform.fpl.model.CaseData;
+import uk.gov.hmcts.reform.fpl.model.Other;
 import uk.gov.hmcts.reform.fpl.model.Recipient;
 import uk.gov.hmcts.reform.fpl.model.Representative;
 import uk.gov.hmcts.reform.fpl.model.RespondentParty;
 import uk.gov.hmcts.reform.fpl.model.common.DocumentReference;
+import uk.gov.hmcts.reform.fpl.model.common.Element;
 import uk.gov.hmcts.reform.fpl.model.notify.LocalAuthorityInboxRecipientsRequest;
 import uk.gov.hmcts.reform.fpl.model.notify.OrderIssuedNotifyData;
+import uk.gov.hmcts.reform.fpl.model.order.generated.GeneratedOrder;
 import uk.gov.hmcts.reform.fpl.service.InboxLookupService;
+import uk.gov.hmcts.reform.fpl.service.OthersService;
 import uk.gov.hmcts.reform.fpl.service.SendDocumentService;
 import uk.gov.hmcts.reform.fpl.service.email.NotificationService;
 import uk.gov.hmcts.reform.fpl.service.email.RepresentativesInbox;
 import uk.gov.hmcts.reform.fpl.service.email.content.OrderIssuedEmailContentProvider;
+import uk.gov.hmcts.reform.fpl.service.orders.history.SealedOrderHistoryService;
+import uk.gov.hmcts.reform.fpl.service.others.OtherRecipientsInbox;
 import uk.gov.hmcts.reform.fpl.service.representative.RepresentativeNotificationService;
 
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 
@@ -40,21 +50,31 @@ import static uk.gov.hmcts.reform.fpl.NotifyTemplates.ORDER_ISSUED_NOTIFICATION_
 import static uk.gov.hmcts.reform.fpl.enums.IssuedOrderType.GENERATED_ORDER;
 import static uk.gov.hmcts.reform.fpl.enums.RepresentativeServingPreferences.DIGITAL_SERVICE;
 import static uk.gov.hmcts.reform.fpl.enums.RepresentativeServingPreferences.EMAIL;
+import static uk.gov.hmcts.reform.fpl.enums.RepresentativeServingPreferences.POST;
 import static uk.gov.hmcts.reform.fpl.handlers.NotificationEventHandlerTestData.LOCAL_AUTHORITY_EMAIL_ADDRESS;
+import static uk.gov.hmcts.reform.fpl.utils.ElementUtils.element;
 
 @ExtendWith(MockitoExtension.class)
 @MockitoSettings(strictness = Strictness.LENIENT)
 class GeneratedOrderEventHandlerTest {
 
-    private static final Set<String> EMAIL_REPS = Set.of("barney@rubble.com");
-    private static final Set<String> DIGITAL_REPS = Set.of("fred@flinstones.com");
+    private static final String EMAIL_REP_1 = "barney@rubble.com";
+    private static final String EMAIL_REP_2 = "barney2@rubble.com";
+    private static final Set<String> EMAIL_REPS = new HashSet<>(Arrays.asList(EMAIL_REP_1, EMAIL_REP_2));
+    private static final String DIGITAL_REP_1 = "fred@flinstones.com";
+    private static final String DIGITAL_REP_2 = "fred2@flinstones.com";
+    private static final Set<String> DIGITAL_REPS = new HashSet<>(Arrays.asList(DIGITAL_REP_1, DIGITAL_REP_2));
     private static final Long CASE_ID = 12345L;
     private static final CaseData CASE_DATA = mock(CaseData.class);
     private static final DocumentReference TEST_DOCUMENT = mock(DocumentReference.class);
     private static final GeneratedOrderEvent EVENT = new GeneratedOrderEvent(CASE_DATA, TEST_DOCUMENT);
     private static final OrderIssuedNotifyData NOTIFY_DATA_WITH_CASE_URL = mock(OrderIssuedNotifyData.class);
     private static final OrderIssuedNotifyData NOTIFY_DATA_WITHOUT_CASE_URL = mock(OrderIssuedNotifyData.class);
+    private static final List<Element<Other>> NO_RECIPIENTS = Collections.emptyList();
+    private static final List<Element<Other>> LAST_GENERATED_ORDER_OTHERS = List.of(element(mock(Other.class)));
 
+    @Mock
+    private GeneratedOrder lastGeneratedOrder;
     @Mock
     private OrderIssuedEmailContentProvider orderIssuedEmailContentProvider;
     @Mock
@@ -69,6 +89,13 @@ class GeneratedOrderEventHandlerTest {
     private SendDocumentService sendDocumentService;
     @Mock
     private RepresentativesInbox representativesInbox;
+    @Mock
+    private SealedOrderHistoryService sealedOrderHistoryService;
+    @Mock
+    private OthersService othersService;
+    @Mock
+    private OtherRecipientsInbox otherRecipientsInbox;
+
     @InjectMocks
     private GeneratedOrderEventHandler underTest;
 
@@ -87,12 +114,22 @@ class GeneratedOrderEventHandlerTest {
             CASE_DATA, EVENT.getOrderDocument(), GENERATED_ORDER
         )).willReturn(NOTIFY_DATA_WITHOUT_CASE_URL);
 
-        given(representativesInbox.getEmailsByPreference(CASE_DATA, DIGITAL_SERVICE)).willReturn(DIGITAL_REPS);
+        given(representativesInbox.getEmailsByPreference(CASE_DATA, DIGITAL_SERVICE)).willReturn(
+            DIGITAL_REPS);
+        given(othersService.getSelectedOthers(CASE_DATA)).willReturn(Collections.emptyList());
+        given(sealedOrderHistoryService.lastGeneratedOrder(any())).willReturn(lastGeneratedOrder);
     }
 
     @Test
-    void shouldNotifyPartiesOnOrderSubmission() {
+    void shouldNotifyPartiesOnOrderSubmissionWhenOldOrdersEvent() {
+        given(lastGeneratedOrder.isNewVersion()).willReturn(false);
         given(representativesInbox.getEmailsByPreference(CASE_DATA, EMAIL)).willReturn(EMAIL_REPS);
+        given(representativesInbox.getEmailsByPreference(CASE_DATA, DIGITAL_SERVICE)).willReturn(DIGITAL_REPS);
+        given(otherRecipientsInbox.getNonSelectedRecipients(eq(EMAIL), eq(CASE_DATA), eq(NO_RECIPIENTS), any()))
+            .willReturn(Collections.emptySet());
+        given(otherRecipientsInbox.getNonSelectedRecipients(
+            eq(DIGITAL_SERVICE), eq(CASE_DATA), eq(NO_RECIPIENTS), any()))
+            .willReturn(Collections.emptySet());
 
         underTest.notifyParties(EVENT);
 
@@ -121,8 +158,53 @@ class GeneratedOrderEventHandlerTest {
     }
 
     @Test
-    void shouldNotBuildNotificationTemplateDataForEmailRepresentativesWhenEmailRepresentativesDoNotExist() {
-        given(representativesInbox.getEmailsByPreference(CASE_DATA, EMAIL)).willReturn(Set.of());
+    @SuppressWarnings("unchecked")
+    void shouldNotifyPartiesOnOrderSubmissionWhenNewOrdersEvent() {
+        given(lastGeneratedOrder.isNewVersion()).willReturn(true);
+        given(lastGeneratedOrder.getOthers()).willReturn(LAST_GENERATED_ORDER_OTHERS);
+
+        given(representativesInbox.getEmailsByPreference(CASE_DATA, EMAIL)).willReturn(EMAIL_REPS);
+        given(representativesInbox.getEmailsByPreference(CASE_DATA, DIGITAL_SERVICE)).willReturn(DIGITAL_REPS);
+        given(otherRecipientsInbox.getNonSelectedRecipients(eq(EMAIL),
+            eq(CASE_DATA),
+            eq(LAST_GENERATED_ORDER_OTHERS),
+            any()))
+            .willReturn((Set) Set.of(EMAIL_REP_1));
+        given(otherRecipientsInbox.getNonSelectedRecipients(eq(DIGITAL_SERVICE),
+            eq(CASE_DATA),
+            eq(LAST_GENERATED_ORDER_OTHERS),
+            any()))
+            .willReturn((Set) Set.of(DIGITAL_REP_1));
+
+        underTest.notifyParties(EVENT);
+
+        verify(issuedOrderAdminNotificationHandler).notifyAdmin(CASE_DATA, TEST_DOCUMENT, GENERATED_ORDER);
+
+        verify(notificationService).sendEmail(
+            ORDER_GENERATED_NOTIFICATION_TEMPLATE_FOR_LA_AND_DIGITAL_REPRESENTATIVES,
+            Set.of(LOCAL_AUTHORITY_EMAIL_ADDRESS),
+            NOTIFY_DATA_WITH_CASE_URL,
+            CASE_ID.toString()
+        );
+
+        verify(representativeNotificationService).sendNotificationToRepresentatives(
+            CASE_ID,
+            NOTIFY_DATA_WITH_CASE_URL,
+            Set.of(DIGITAL_REP_2),
+            ORDER_GENERATED_NOTIFICATION_TEMPLATE_FOR_LA_AND_DIGITAL_REPRESENTATIVES
+        );
+
+        verify(representativeNotificationService).sendNotificationToRepresentatives(
+            CASE_ID,
+            NOTIFY_DATA_WITHOUT_CASE_URL,
+            Set.of(EMAIL_REP_2),
+            ORDER_ISSUED_NOTIFICATION_TEMPLATE_FOR_REPRESENTATIVES
+        );
+    }
+
+    @Test
+    void shouldNotBuildNotificationTemplateDataForEmailRepsWhenEmailRepsDoNotExistAndNewOrdersEvent() {
+        given(lastGeneratedOrder.isNewVersion()).willReturn(true);
 
         underTest.notifyParties(EVENT);
 
@@ -134,7 +216,47 @@ class GeneratedOrderEventHandlerTest {
     }
 
     @Test
-    void shouldSendOrderToRepresentativesAndNotRepresentedRespondentsByPost() {
+    void shouldNotBuildNotificationTemplateDataForEmailRepsWhenEmailRepsDoNotExistAndOldOrdersEvent() {
+        given(lastGeneratedOrder.isNewVersion()).willReturn(false);
+        given(representativesInbox.getEmailsByPreference(CASE_DATA, EMAIL)).willReturn(Sets.newHashSet());
+
+        underTest.notifyParties(EVENT);
+
+        verify(orderIssuedEmailContentProvider, never()).getNotifyDataWithoutCaseUrl(any(), any(), any());
+
+        verify(representativeNotificationService, never()).sendNotificationToRepresentatives(
+            any(), any(), anySet(), eq(ORDER_ISSUED_NOTIFICATION_TEMPLATE_FOR_REPRESENTATIVES)
+        );
+    }
+
+    @Test
+    @SuppressWarnings("unchecked")
+    void shouldSendOrderToRepresentativesAndNotRepresentedRespondentsByPostAndNewOrdersEvent() {
+        given(lastGeneratedOrder.isNewVersion()).willReturn(true);
+        given(lastGeneratedOrder.getOthers()).willReturn(LAST_GENERATED_ORDER_OTHERS);
+        final Representative representative = mock(Representative.class);
+        final Representative representative2 = mock(Representative.class);
+        final RespondentParty otherRespondent = mock(RespondentParty.class);
+
+        given(sendDocumentService.getStandardRecipients(CASE_DATA)).willReturn(List.of(representative,representative2));
+        given(otherRecipientsInbox.getNonSelectedRecipients(eq(POST),
+            eq(CASE_DATA), eq(LAST_GENERATED_ORDER_OTHERS), any()))
+            .willReturn((Set) Set.of(representative));
+        given(otherRecipientsInbox.getSelectedRecipientsWithNoRepresentation(LAST_GENERATED_ORDER_OTHERS))
+            .willReturn(Set.of(otherRespondent));
+
+        underTest.sendOrderByPost(EVENT);
+
+        verify(sendDocumentService).sendDocuments(CASE_DATA,
+            List.of(TEST_DOCUMENT),
+            List.of(representative2, otherRespondent));
+
+        verifyNoInteractions(notificationService);
+    }
+
+    @Test
+    void shouldSendOrderToRepresentativesAndNotRepresentedRespondentsByPostAndOldOrdersEvent() {
+        given(lastGeneratedOrder.isNewVersion()).willReturn(false);
         final Representative representative = mock(Representative.class);
         final RespondentParty respondent = mock(RespondentParty.class);
         final List<Recipient> recipients = List.of(representative, respondent);
